Refactor authentication module
- Implemented AuthActionTokenStorePort and AuthIdentityStorePort interfaces for token management.
- Created AuthActionTokenView and AuthIdentityView records for token and identity representation.
- Developed JpaAuthStoreAdapter for persistence operations related to users, identities, and tokens.
- Introduced PasswordHasherAdapter for password hashing and verification.
- Configured SecurityConfig for Spring Security, including CSRF protection and CORS settings.
- Added AuthCookieNames for consistent cookie naming.
- Established architecture rules to maintain separation of concerns across modules.