@@ -1,8 +1,5 @@
 package com.blaie.blaie_be.core.security;
 
-import com.blaie.blaie_be.authz.domain.PermissionAction;
-import java.util.Collections;
-import java.util.EnumSet;
 import java.util.Objects;
 import java.util.Set;
 
@@ -10,7 +7,7 @@ public record CurrentUser(
         String userId,
         String tenantId,
         boolean admin,
-        Set<PermissionAction> permissions
+        Set<String> permissions
 ) {
     public CurrentUser {
         if (userId == null || userId.isBlank()) {
@@ -18,11 +15,11 @@ public record CurrentUser(
         }
         permissions = permissions == null || permissions.isEmpty()
                 ? Set.of()
-                : Collections.unmodifiableSet(EnumSet.copyOf(permissions));
+                : Set.copyOf(permissions);
         tenantId = tenantId == null || tenantId.isBlank() ? null : tenantId;
     }
 
-    public boolean hasPermission(PermissionAction action) {
+    public boolean hasPermission(String action) {
         return admin || permissions.contains(Objects.requireNonNull(action, "action must not be null"));
     }
 }
